# CSV-Merge

./: README.md
ClassicCSVMerge/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  settingswidget.cpp  settingswidget.h
QML CSV Merge/: CMakeLists.txt  main.cpp  main.qml  settings.qml
